<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".TeacherLogin">

    <EditText
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:id="@+id/editText"
        android:hint="@string/enter_user_id"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:importantForAutofill="no"
        android:inputType="" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:id="@+id/editText2"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:importantForAutofill="no" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:id="@+id/button3"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:onClick="doOnClick" />

</RelativeLayout>
